--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "teeny-tiny-explorer",
+  "homepage": "https://github.com/nickimariecarr/TeenyTinyExplorersFinalApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -32,6 +33,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -55,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-bootstrap": "^0.32.28"
+    "@types/react-bootstrap": "^0.32.28",
+    "gh-pages": "^3.2.3"
   }
 }
